traces/bug_216.txt
examples++-load/ff-mmap-semaphore.cpp:170: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/ff-mmap-semaphore.cpp:170:1: initialization of callDoLoadInit
168.   }
169.   
170. > LOADFUNC(inittt);

examples++-load/ff-mmap-semaphore.cpp:170:1: call to DoLoadInit
168.   }
169.   
170. > LOADFUNC(inittt);

examples++-load/ff-mmap-semaphore.cpp:170:1: call to addInitFunct
  168.   }
  169.   
  170. > LOADFUNC(inittt);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
